[gd_scene load_steps=4 format=3 uid="uid://viuryasit4gw"]

[ext_resource type="Script" uid="uid://svah5s233gqw" path="res://HUD/DialogueSystem/DialogBox.gd" id="1_on6d1"]
[ext_resource type="Texture2D" uid="uid://bifv78ymtytpf" path="res://Assets/Characters/Portraits/npc_01.png" id="2_0k4bc"]
[ext_resource type="Theme" uid="uid://cpkiv5br2vwun" path="res://Themes/dialog_theme.tres" id="2_lttjw"]

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource("1_on6d1")

[node name="Panel" type="Panel" parent="."]
offset_left = 160.0
offset_top = 535.0
offset_right = 1130.0
offset_bottom = 706.0
theme = ExtResource("2_lttjw")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 968.0
offset_bottom = 171.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="Panel/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(170, 150)
layout_mode = 2
texture = ExtResource("2_0k4bc")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="Panel/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "asdfvasdfasdefasdf"

[node name="TextLabel" type="RichTextLabel" parent="Panel/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "hjhgjhgjhgjhg
gjhgjh"
fit_content = true

[node name="OptionsCenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 2
offset_left = 193.0
offset_top = 41.0
offset_right = 920.0
offset_bottom = 165.0

[node name="ChoiceContainer" type="VBoxContainer" parent="Panel/OptionsCenterContainer"]
layout_mode = 2

[node name="Option1" type="Button" parent="Panel/OptionsCenterContainer/ChoiceContainer"]
layout_mode = 2
text = "asdasdasdasdasd"

[node name="Option2" type="Button" parent="Panel/OptionsCenterContainer/ChoiceContainer"]
layout_mode = 2
text = "asdfasdfasdfasdf"

[node name="Option3" type="Button" parent="Panel/OptionsCenterContainer/ChoiceContainer"]
layout_mode = 2
text = "asdfasdfasdfasdfasdf"

[node name="YourAnswerCenterContainer" type="CenterContainer" parent="Panel"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
offset_left = -10.0
offset_top = -97.0
offset_right = 980.0
offset_bottom = -21.0

[node name="YourAnswerContainer" type="VBoxContainer" parent="Panel/YourAnswerCenterContainer"]
layout_mode = 2

[node name="YourAnswer" type="Label" parent="Panel/YourAnswerCenterContainer/YourAnswerContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
text = "Sua resposta: asdasdasdasdasdxcvzxcvzxcvzxcvzxcvzxcvzxcvxczv"

[node name="Translation" type="Label" parent="Panel/YourAnswerCenterContainer/YourAnswerContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
text = "Tradução: dskhfkashdfjsdgfkjhzsgdfkjhagsdf"
